Put routes correction
